2004-01-02  Christian Stimming  <stimming@tuhh.de>

	* AUTHORS: Add remark about authors and contributors. Add
	copyright notices to other headers.

2003-11-29  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Released version 0.6.
	
	* src/bankdata/bankdata.txt: Updated, now valid from 2003-12-03
	onwards.

	* src/bankdata/bundesbank.sed: Remove \r\n line endings to fix sed
	script, after the hint by Thomas Viehmann <tv@beamnet.de>.

2003-11-19  Christian Stimming <stimming@tuhh.de>

	* configure.in: released version 0.5. Added argument for compile
	switches.

2003-10-29  Fabian Kaiser <fabian@openhbci.de>

	* src/bankdata/bankdata.txt: Updated, now valid from 2003-07-31
	onwards.

	* src/lib/algorithms.cc: Fix for algo04 (method 52)

2003-09-01  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Implementation for A6, A7, A8 algorithms
	by Daniel Gloeckner <daniel-gl@gmx.net>.

	* src/bankdata/bundesbank.sed: Script for ascii file conversion by
	Daniel Gloeckner <daniel-gl@gmx.net>.

2003-08-11  Christian Stimming <stimming@tuhh.de>
	
	* configure.in: released version 0.4

2003-08-04  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Fix unparenthesed array initialization.

2003-08-03  Christian Stimming  <stimming@tuhh.de>

	* src/include/ktoblzcheck.h: Removed __gnu_cxx::hash_map since
	library headers that change depending on some define variable are
	no good -- imagine compiling the lib with this define active, but
	using it without. Then the program sees objects with a different
	ABI. Therefore removed that.

	* doc/ktoblzcheck.1, src/lib/ktoblzcheck.cc,
	src/lib/algorithms.{h,cc}: Many more algorithm implementation by
	Jens Gecius <jens@gecius.de>. According to him now all
	Bundesbank's algorithms are now implemented. Plus man page.

2003-06-16  Christian Stimming <stimming@tuhh.de>

	* src/include/ktoblzcheck.h, src/lib/ktoblzcheck.cc: It turned out
	that std::map from <map> is really equally fast as