@@ -1,27 +1,42 @@
 %define name ktoblzcheck
 %define version @rpm_version@
-%define release @rpm_release@
-%define rpm_cxxflags \"-march=i486 -mcpu=i586\"
-%define rpm_cflags \"-march=i486 -mcpu=i586\"
+%define release @rpm_release@.%{disttag}%{distver}
 
+%define is_mandrake %(test -e /etc/mandrake-release && echo 1 || echo 0)
+%define is_suse %(test -e /etc/SuSE-release && echo 1 || echo 0)
+%define is_fedora %(test -e /etc/fedora-release && echo 1 || echo 0)
 
-# Note: All commands below use %{_prefix}, which is rpm's system
-# default prefix (as defined in /usr/lib/rpm/macros), so this variable
-# is not used inside this spec file.
-#%define prefix @prefix@
+%define dist redhat
+%define disttag rh
+
+%if %is_mandrake
+%define dist mandrake
+%define disttag mdk
+%endif
+%if %is_suse
+%define dist suse
+%define disttag suse
+%endif
+%if %is_fedora
+%define dist fedora
+%define disttag rhfc
+%endif
+
+%define distver %(release="`rpm -q --queryformat='%{VERSION}' %{dist}-release 2>/dev/null`" ; if test $? != 0 ; then release="" ; fi ; echo "$release")
 
 Summary: A library to check account numbers and bank codes of German banks.
 Name: %{name}
 Version: %{version}
 Release: %{release}
 Source: http://download.sourceforge.net/ktoblzcheck/%{name}-%{version}.tar.gz
-Group: Libraries/System
-Copyright: LGPL
+Group: System Environment/Libraries
+License: LGPL
 Packager: Christian Stimming <stimming@tuhh.de>
-URL: http://sourceforge.net/projects/ktoblzcheck
+URL: http://ktoblzcheck.sourceforge.net
 BuildRoot: %{_tmppath}/%{name}-%{version}-root
+# in case it gets split sometime
+Provides: ktoblzcheck-devel = %{version}-%{release}
 Prereq: /sbin/ldconfig
-Prefix: %{_prefix}
 
 %description 
 KtoBLZCheck is a library to check account numbers and bank codes of
@@ -34,17 +49,13 @@ codes (BLZ) to the clear-text name and location of the bank.
 %setup -q
 
 %build
-#CXXFLAGS=%{rpm_cxxflags} CFLAGS=%{rpm_cflags}  ./configure --prefix=%{_prefix} 
 %{configure}
-
-
 make
 
 %install
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
 
-LIBRARY_PATH=$RPM_BUILD_ROOT%{_libdir} make DESTDIR=$RPM_BUILD_ROOT \
-  install
+make DESTDIR=$RPM_BUILD_ROOT install
 
 %clean
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
